--- a/vite-react-app/src/App.css
+++ b/vite-react-app/src/App.css
@@ -1,4 +1,4 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -16,8 +16,8 @@
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
+} */
+/* 
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
@@ -27,6 +27,7 @@
   }
 }
 
+*/
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
