--- a/vite-react-app/src/components/Footer/index.css
+++ b/vite-react-app/src/components/Footer/index.css
@@ -1,7 +1,13 @@
-.container {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  background-color: #FE4236;
+
+.footer {
   margin-top: auto;
-} 
+  padding: 20px;
+  background-color: #FE4236;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+}
+.list-inline-spaced .list-inline-item:not(:last-child) {
+  margin-right: 80px;
+}
