--- a/vite-react-app/src/components/Footer/index.css
+++ b/vite-react-app/src/components/Footer/index.css
@@ -7,7 +7,13 @@
   left: 0;
   bottom: 0;
   width: 100%;
+  height: 70px;
 }
 .list-inline-spaced .list-inline-item:not(:last-child) {
   margin-right: 80px;
+}
+
+.list-inline-item a {
+  color: white ;
+  text-decoration: none;
 }
