--- a/vite-react-app/src/components/Footer/index.css
+++ b/vite-react-app/src/components/Footer/index.css
@@ -1,11 +1,8 @@
-
 .footer {
   margin-top: auto;
   padding: 20px;
-  background-color: #FE4236;
-  position: fixed;
-  left: 0;
-  bottom: 0;
+  background-color: #fe4236;
+
   width: 100%;
   height: 70px;
 }
@@ -14,6 +11,6 @@
 }
 
 .list-inline-item a {
-  color: white ;
+  color: white;
   text-decoration: none;
 }
