--- a/vite-react-app/src/components/Footer/index.css
+++ b/vite-react-app/src/components/Footer/index.css
@@ -8,6 +8,7 @@
   bottom: 0;
   width: 100%;
   height: 70px;
+  z-index: 9999;
 }
 .list-inline-spaced .list-inline-item:not(:last-child) {
   margin-right: 80px;
