change styles in navbar, home, cards with css

--- a/vite-react-app/src/components/Navbar/index.css
+++ b/vite-react-app/src/components/Navbar/index.css
@@ -11,11 +11,11 @@
 
 .nav-link {
   color: #f7f3ee;
-  margin-right: 10px;
+  margin: 0 20px 0 10px;
 }
 
 .nav-link:hover {
-  color: #f7f3ee;
+  color: #acc1ff;
 }
 
 .form-control {
@@ -26,18 +26,19 @@
   margin-right: 10px;
 }
 
-.btn-login {
+.btn-loguser {
   background-color: #fe4236;
-  border-color: #fe4236;
+  border-color: #f7f3ee;
   color: white;
-  margin-right: 80px;
+}
+.btn-log-admin {
+  background-color: #123ac8;
+  border-color: #f7f3ee;
+  color: white;
+  font-size: xx-small;
+  margin-right: 30px;
 }
 
-.btn-login {
-  background-color: #fe4236;
-  border-color: white;
-  color: white;
-}
 .custom-navbar {
   background-color: #fe4236;
   height: auto;
@@ -50,6 +51,7 @@
 .navbar-admin {
   background-color: #123ac8;
   height: auto;
+  font-size: small;
 }
 
 .icono-perfil {
@@ -63,6 +65,7 @@
   margin: 0;
   border-radius: 0%;
 }
-.join-row {
-  margin: 0;
+
+.logo-image {
+  margin-left: 20px;
 }
