add-selectProperti/edit-property

--- a/vite-react-app/src/components/User/index.css
+++ b/vite-react-app/src/components/User/index.css
@@ -1,6 +1,6 @@
 .custom-container {
   width: 60%;
-  max-width: 600px; /* Limita el ancho máximo */
+  max-width: 600px; 
   padding: 20px;
   margin: 0 auto;
 }
